force-app/main/default/objects/Marketing_Cloud_Manual_Sync__mdt/Marketing_Cloud_Manual_Sync__mdt.object-meta.xml
<CustomObject>
    <description>Used to sync SC to MC when a formula has been changed over night.</description>
    <label>Marketing Cloud Manual Sync</label>
    <pluralLabel>Marketing Cloud Manual Sync</pluralLabel>
</CustomObject>