force-app/main/default/objects/Marketing_Cloud_Manual_Sync__mdt/fields/API_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Field_Name__c</fullName>
    <inlineHelpText>API field name of field to check</inlineHelpText>
    <label>API Field Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>