force-app/main/default/objects/Marketing_Cloud_Manual_Sync__mdt/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>MY</fullName>
                <default>true</default>
                <label>MY</label>
            </value>
            <value>
                <fullName>PH</fullName>
            </value>
            <value>
                <fullName>SG</fullName>
            </value>
            <value>
                <fullName>TH</fullName>
            </value>
            <value>
                <fullName>VN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>