force-app/main/default/objects/Marketing_Cloud_Manual_Sync__mdt/fields/Values__c.field-meta.xml
<CustomField>
    <fullName>Values__c</fullName>
    <inlineHelpText>Comma separated</inlineHelpText>
    <label>Values</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>